5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1679_1105.log
== TEST (2019-04-19 22:05:46) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = int(input("Digite o valor da cedula: "))

if(brasao == "lobo"):
	casa =  "Stark"
elif(brasao == "leao"):
	casa = "Lannister"
elif(brasao == "veado"):
	casa = "Baratheon"
elif(brasao == "dragao"):
	casa = "Targaryen"
elif(brasao == "rosa"):
	casa = "Tyrell"
elif(brasao == "sol"):
	casa = "Martell"
elif(brasao == "lula"):
	casa = "Greyjoy"
elif(brasao == "esfolado"):
	casa = "Bolton"
elif(brasao == "turta"):
	casa = "Tully"
else:
	print("Entrada:", brasao)
	print("Brasao Invalido")

print("Entrada:", brasao)
print("Casa:", casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    brasao = int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:06:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: "))

if(brasao == "lobo"):
	casa =  "Stark"
elif(brasao == "leao"):
	casa = "Lannister"
elif(brasao == "veado"):
	casa = "Baratheon"
elif(brasao == "dragao"):
	casa = "Targaryen"
elif(brasao == "rosa"):
	casa = "Tyrell"
elif(brasao == "sol"):
	casa = "Martell"
elif(brasao == "lula"):
	casa = "Greyjoy"
elif(brasao == "esfolado"):
	casa = "Bolton"
elif(brasao == "turta"):
	casa = "Tully"
else:
	print("Entrada:", brasao)
	print("Brasao Invalido")

print("Entrada:", brasao)
print("Casa:", casa)
-- ERROR:
File "XXXX", line 4
    brasao = input())
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:06:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	casa =  "Stark"
elif(brasao == "leao"):
	casa = "Lannister"
elif(brasao == "veado"):
	casa = "Baratheon"
elif(brasao == "dragao"):
	casa = "Targaryen"
elif(brasao == "rosa"):
	casa = "Tyrell"
elif(brasao == "sol"):
	casa = "Martell"
elif(brasao == "lula"):
	casa = "Greyjoy"
elif(brasao == "esfolado"):
	casa = "Bolton"
elif(brasao == "turta"):
	casa = "Tully"
else:
	print("Entrada:", brasao)
	print("Brasao Invalido")

print("Entrada:", brasao)
print("Casa:", casa)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:07:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	casa =  "Stark"
elif(brasao == "leao"):
	casa = "Lannister"
elif(brasao == "veado"):
	casa = "Baratheon"
elif(brasao == "dragao"):
	casa = "Targaryen"
elif(brasao == "rosa"):
	casa = "Tyrell"
elif(brasao == "sol"):
	casa = "Martell"
elif(brasao == "lula"):
	casa = "Greyjoy"
elif(brasao == "esfolado"):
	casa = "Bolton"
elif(brasao == "turta"):
	casa = "Tully"
else:
	print("Entrada:", brasao)
	print("Brasao Invalido")

print("Entrada:", brasao)
print("Casa:", casa)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:07:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	casa =  "Stark"
elif(brasao == "leao"):
	casa = "Lannister"
elif(brasao == "veado"):
	casa = "Baratheon"
elif(brasao == "dragao"):
	casa = "Targaryen"
elif(brasao == "rosa"):
	casa = "Tyrell"
elif(brasao == "sol"):
	casa = "Martell"
elif(brasao == "lula"):
	casa = "Greyjoy"
elif(brasao == "esfolado"):
	casa = "Bolton"
elif(brasao == "turta"):
	casa = "Tully"
else:
	print("Entrada:", brasao)
	print("Brasao Invalido")

print("Entrada:", brasao)
print("Casa", casa)
-- OUTPUT:
Entrada: lula
Casa Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:08:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	casa =  "Stark"
elif(brasao == "leao"):
	casa = "Lannister"
elif(brasao == "veado"):
	casa = "Baratheon"
elif(brasao == "dragao"):
	casa = "Targaryen"
elif(brasao == "rosa"):
	casa = "Tyrell"
elif(brasao == "sol"):
	casa = "Martell"
elif(brasao == "lula"):
	casa = "Greyjoy"
elif(brasao == "esfolado"):
	casa = "Bolton"
elif(brasao == "turta"):
	casa = "Tully"
else:
	print("Entrada:", brasao)
	print("Brasao Invalido")

print("Entrada:", brasao)
print("Casa:", casa)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 22:09:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	casa =  "Stark"
	elif(brasao == "leao"):
		casa = "Lannister"
	elif(brasao == "veado"):
		casa = "Baratheon"
	elif(brasao == "dragao"):
		casa = "Targaryen"
	elif(brasao == "rosa"):
		casa = "Tyrell"
	elif(brasao == "sol"):
		casa = "Martell"
	elif(brasao == "lula"):
		casa = "Greyjoy"
	elif(brasao == "esfolado"):
		casa = "Bolton"
	elif(brasao == "turta"):
		casa = "Tully"
else:
	print("Entrada:", brasao)
	print("Brasao Invalido")

print("Entrada:", brasao)
print("Casa:", casa)
-- EXECUTION TIME:
0.11365
-- ERROR:
  File "/home/codebench/codes/1679/1105/main.py", line 8
    elif(brasao == "leao"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:09:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	casa =  "Stark"
	elif(brasao == "leao"):
		casa = "Lannister"
	elif(brasao == "veado"):
		casa = "Baratheon"
	elif(brasao == "dragao"):
		casa = "Targaryen"
	elif(brasao == "rosa"):
		casa = "Tyrell"
	elif(brasao == "sol"):
		casa = "Martell"
	elif(brasao == "lula"):
		casa = "Greyjoy"
	elif(brasao == "esfolado"):
		casa = "Bolton"
	elif(brasao == "turta"):
		casa = "Tully"
else:
	print("Brasao Invalido")

print("Entrada:", brasao)
print("Casa:", casa)
-- ERROR:
File "XXXX", line 8
    elif(brasao == "leao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:11:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	casa =  "Stark"
elif(brasao == "leao"):
	casa = "Lannister"
elif(brasao == "veado"):
	casa = "Baratheon"
elif(brasao == "dragao"):
	casa = "Targaryen"
elif(brasao == "rosa"):
	casa = "Tyrell"
elif(brasao == "sol"):
	casa = "Martell"
elif(brasao == "lula"):
	casa = "Greyjoy"
elif(brasao == "esfolado"):
	casa = "Bolton"
elif(brasao == "turta"):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Entrada:", brasao)
print("Casa:", casa)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 22:11:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	casa =  "Stark"
elif(brasao == "leao"):
	casa = "Lannister"
elif(brasao == "veado"):
	casa = "Baratheon"
elif(brasao == "dragao"):
	casa = "Targaryen"
elif(brasao == "rosa"):
	casa = "Tyrell"
elif(brasao == "sol"):
	casa = "Martell"
elif(brasao == "lula"):
	casa = "Greyjoy"
elif(brasao == "esfolado"):
	casa = "Bolton"
elif(brasao == "turta"):
	casa = "Tully"
else:
	casa = "Brasao invalido"

print("Entrada:", brasao)
print("Casa:", casa)
-- EXECUTION TIME:
0.191609
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:16:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	print("Entrada:", brasao)
	print("Casa: "Stark")
elif(brasao == "leao"):
	print("Entrada:", brasao)
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Entrada:", brasao)
	print("Casa: Baratheon"
elif(brasao == "dragao"):
	print("Entrada:", brasao)
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Entrada:", brasao)
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Entrada:", brasao)
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Entrada:", brasao)
	print("Casa: "Greyjoy")
elif(brasao == "esfolado"):
	print("Entrada:", brasao)
	print("Casa: "Bolton")
elif(brasao == "turta"):
	print("Entrada:", brasao)
	print("Casa: "Tully")
else:
	print("Entrada:", brasao)
	print("Brasao invalido")


-- ERROR:
File "XXXX", line 8
    print("Casa: "Stark")
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:16:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	print("Entrada:", brasao)
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Entrada:", brasao)
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Entrada:", brasao)
	print("Casa: Baratheon"
elif(brasao == "dragao"):
	print("Entrada:", brasao)
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Entrada:", brasao)
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Entrada:", brasao)
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Entrada:", brasao)
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Entrada:", brasao)
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Entrada:", brasao)
	print("Casa: Tully")
else:
	print("Entrada:", brasao)
	print("Brasao invalido")


-- ERROR:
File "XXXX", line 15
    elif(brasao == "dragao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:17:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	print("Entrada:", brasao)
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Entrada:", brasao)
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Entrada:", brasao)
	print("Casa: Baratheon"
elif(brasao == "dragao"):
	print("Entrada:", brasao)
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Entrada:", brasao)
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Entrada:", brasao)
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Entrada:", brasao)
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Entrada:", brasao)
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Entrada:", brasao)
	print("Casa: Tully")
else:
	print("Entrada:", brasao)
	print("Brasao invalido")


-- ERROR:
File "XXXX", line 15
    elif(brasao == "dragao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:19:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	print("Entrada:", brasao)
	print("Casa: Stark")
	elif(brasao == "leao"):
		print("Entrada:", brasao)
		print("Casa: Lannister")
	elif(brasao == "veado"):
		print("Entrada:", brasao)
		print("Casa: Baratheon"
	elif(brasao == "dragao"):
		print("Entrada:", brasao)
		print("Casa: Targaryen")
	elif(brasao == "rosa"):
		print("Entrada:", brasao)
		print("Casa: Tyrell")
	elif(brasao == "sol"):
		print("Entrada:", brasao)
		print("Casa: Martell")
	elif(brasao == "lula"):
		print("Entrada:", brasao)
		print("Casa: Greyjoy")
	elif(brasao == "esfolado"):
		print("Entrada:", brasao)
		print("Casa: Bolton")
	elif(brasao == "turta"):
		print("Entrada:", brasao)
		print("Casa: Tully")
else:
	print("Entrada:", brasao)
	print("Brasao invalido")


-- ERROR:
File "XXXX", line 9
    elif(brasao == "leao"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:22:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	casa = "Stark"
elif(brasao == "leao"):
	casa = "Lannister"
elif(brasao == "veado"):
	casa = "Baratheon"
elif(brasao == "dragao"):
	casa = "Targaryen"
elif(brasao == "rosa"):
	casa = "Tyrell"
elif(brasao == "sol"):
	casa = "Martell"
elif(brasao == "lula"):
	casa: "Greyjoy")
elif(brasao == "esfolado"):
	casa = "Bolton"
elif(brasao == "turta"):
	casa = "Tully"
else:
	casa = "Brasao invalido"


-- ERROR:
File "XXXX", line 19
    casa: "Greyjoy")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:24:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	casa = "Casa: Stark"
elif(brasao == "leao"):
	casa = "Casa: Lannister"
elif(brasao == "veado"):
	casa = "Casa: Baratheon"
elif(brasao == "dragao"):
	casa = "Casa: Targaryen"
elif(brasao == "rosa"):
	casa = "Casa: Tyrell"
elif(brasao == "sol"):
	casa = "Casa: Martell"
elif(brasao == "lula"):
	casa: "Casa: Greyjoy"
elif(brasao == "esfolado"):
	casa = "Casa: Bolton"
elif(brasao == "turta"):
	casa = "Casa: Tully"
else:
	casa = "Brasao invalido"

print("Entrada:", brasao)
print(casa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 28, in <module>
    print(casa)
NameError: name 'casa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:24:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	casa = "Casa: Stark"
elif(brasao == "leao"):
	casa = "Casa: Lannister"
elif(brasao == "veado"):
	casa = "Casa: Baratheon"
elif(brasao == "dragao"):
	casa = "Casa: Targaryen"
elif(brasao == "rosa"):
	casa = "Casa: Tyrell"
elif(brasao == "sol"):
	casa = "Casa: Martell"
elif(brasao == "lula"):
	casa = "Casa: Greyjoy"
elif(brasao == "esfolado"):
	casa = "Casa: Bolton"
elif(brasao == "turta"):
	casa = "Casa: Tully"
else:
	casa = "Brasao invalido"

print("Entrada:", brasao)
print(casa)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 22:24:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	casa = "Casa: Stark"
elif(brasao == "leao"):
	casa = "Casa: Lannister"
elif(brasao == "veado"):
	casa = "Casa: Baratheon"
elif(brasao == "dragao"):
	casa = "Casa: Targaryen"
elif(brasao == "rosa"):
	casa = "Casa: Tyrell"
elif(brasao == "sol"):
	casa = "Casa: Martell"
elif(brasao == "lula"):
	casa = "Casa: Greyjoy"
elif(brasao == "esfolado"):
	casa = "Casa: Bolton"
elif(brasao == "turta"):
	casa = "Casa: Tully"
else:
	casa = "Brasao invalido"

print("Entrada:", brasao)
print(casa)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 22:24:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("Digite o valor da cedula: ")

if(brasao == "lobo"):
	casa = "Casa: Stark"
elif(brasao == "leao"):
	casa = "Casa: Lannister"
elif(brasao == "veado"):
	casa = "Casa: Baratheon"
elif(brasao == "dragao"):
	casa = "Casa: Targaryen"
elif(brasao == "rosa"):
	casa = "Casa: Tyrell"
elif(brasao == "sol"):
	casa = "Casa: Martell"
elif(brasao == "lula"):
	casa = "Casa: Greyjoy"
elif(brasao == "esfolado"):
	casa = "Casa: Bolton"
elif(brasao == "turta"):
	casa = "Casa: Tully"
else:
	casa = "Brasao invalido"

print("Entrada:", brasao)
print(casa)
-- EXECUTION TIME:
0.17155
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
